# learngit

./: README.md  test1.txt  test2.c
learncmake/try1/: CMakeLists.txt  learn.cpp  try1.cpp  tryconfig.h.in
